adionado filtro de hinos por lingua

--- a/mobile/src/index.html
+++ b/mobile/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Hinário App</title>
+  <title>Hinário - Louvai ao Senhor (IERA)</title>
 
   <base href="/" />
 
